--- a/A3.html
+++ b/A3.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>My website</title>
-    <link rel="stylesheet" href="A3.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner">
+    <dliv class="banner">
         <div class="navbar">
-            <img src="images/1logowhite.svg" class="logo">
+            <img src="images/logo.svg" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
@@ -21,19 +21,21 @@
                         </ul>
                 </li>
                 <li>
-                    <a href="ex1.html">Exercises</a>
+                    <a href="ex2.html">Exercises</a>
                 </li>
             </ul>
         </div>
 
         <div class="a1">
-            <div class="pictures">
-            <img src="images/Assignment 3-1.png" class="stand-picture">
-            </div>
             <div class="text">
-            <p class="myinfo">ASSIGNMENT 3 - Embedded Programming 
-              <br>https://www.tinkercad.com/things/hP4dufMeiIG</p>
-              </div>
+                <p class="myinfo">ASSIGNMENT 3 - Embedded Programming </p>
+                  
+                  </div>
+            <div class="pictures">
+                <iframe width="725" height="453" src="https://www.tinkercad.com/embed/hP4dufMeiIG?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+
+                <iframe width="725" height="453" src="https://www.tinkercad.com/embed/cDwFATMdix6?editbtn=1" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+
         </div>
 
         </body>
