--- a/A2.html
+++ b/A2.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>My website</title>
-    <link rel="stylesheet" href="A2.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner">
+    <dliv class="banner">
         <div class="navbar">
-            <img src="images/1logowhite.svg" class="logo">
+            <img src="images/logo.svg" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
@@ -21,7 +21,7 @@
                         </ul>
                 </li>
                 <li>
-                    <a href="ex1.html">Exercises</a>
+                    <a href="ex2.html">Exercises</a>
                 </li>
             </ul>
         </div>
@@ -30,7 +30,7 @@
             <div class="pictures">
             <img src="images/woodbox1.jpg" class="stand-picture">
             <img src="images/woodbox2.jpg" class="stand-picture">
-            <img src="images/woodbox3.png" class="stand-picture">
+            <iframe src="https://ichat4096.autodesk360.com/shares/public/SHd38bfQT1fb47330c99e53c641f72d022a6?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
             </div>
             <div class="text">
             <p class="myinfo">ASSIGNMENT 2 - LASER CUTTING 
