--- a/assignments.html
+++ b/assignments.html
@@ -1,34 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>My website</title>
-    <link rel="stylesheet" href="assignments.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-
-  <body>
-    <div class="banner">
-      <div class="navbar">
-          <img src="images/1logowhite.svg" class="logo">
-          <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="aboutme.html">About Me</a></li>
-              <li>
-                  <a href="ex1.html">Assignments ▼</a>
-                      <ul class="dropdown1">
-                          <li><a href="assignments.html">Documentation</a></li>
-                          <li><a href="A1.html">1</a></li>
-                          <li><a href="A2.html">2</a></li>
-                          <li><a href="A3.html">3</a></li>
-                      </ul>
-              </li>
-              <li>
-                  <a href="ex1.html">Exercises</a>
-              </li>
-          </ul>
-      </div>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <dliv class="banner">
+        <div class="navbar">
+            <img src="images/logo.svg" class="logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutme.html">About Me</a></li>
+                <li>
+                    <a href="#">Assignments ▼</a>
+                        <ul class="dropdown1">
+                            <li><a href="assignments.html">Documentation</a></li>
+                            <li><a href="A1.html">1</a></li>
+                            <li><a href="A2.html">2</a></li>
+                            <li><a href="A3.html">3</a></li>
+                        </ul>
+                </li>
+                <li>
+                    <a href="ex2.html">Exercises</a>
+                </li>
+            </ul>
+        </div>
 
       <div>
           <section class="one">
