--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="banner">
+    <dliv class="banner">
         <div class="navbar">
-            <img src="images/1logowhite.svg" class="logo">
+            <img src="images/logo.svg" class="logo">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
@@ -21,7 +21,7 @@
                         </ul>
                 </li>
                 <li>
-                    <a href="ex1.html">Exercises</a>
+                    <a href="ex2.html">Exercises</a>
                 </li>
             </ul>
         </div>
@@ -29,11 +29,11 @@
         <div class="content">
             <h1>MY WEBSITE</h1>
             <p>EP1000</p> 
-            <div><a href="aboutme.html"><button class="button">ABOUT ME</a></button>
+            
             </div>
         </div>
     </div>
-    <div id="bottom">OLAR SARAH MARIE BULAC - 2208024</div>
+    <div class="bottom">O L A R  S A R A H  M A R I E  B U L A C - 2 2 0 8 0 2 4</div>
 
 </body>
 </html>
